--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,41 @@
-<h1>
-  {{title}}
-</h1>
+<!-- <app-demo></app-demo> -->
+
+<md-sidenav-layout [class.m2app-dark]="isDarkTheme">
+  <!--
+  <md-sidenav #sidenav mode="side" class="app-sidenav">
+    Sidenav
+  </md-sidenav> -->
+
+  <md-toolbar color="primary">
+    <!-- <button class="app-icon-button" (click)="sidenav.toggle()">
+      <i class="material-icons app-toolbar-menu">menu</i>
+    </button> -->
+
+    Character Sheet
+
+    <span class="app-toolbar-filler"></span>
+    <!-- <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button> -->
+  </md-toolbar>
+
+
+  <div class="app-content">
+      <md-card *ngFor="let character of characters; let i = index">
+        <md-card-content class="fieldset">
+          <character-sheet
+            [character]="character"
+            (change)="changeCharacter($event, i)"
+          ></character-sheet>
+        </md-card-content>
+
+        <md-card-actions>
+          <button md-ripple md-raised-button color="accent"
+            (click)="changeCharacter(data.randomCharacter(), i)"
+          >REROLL</button>
+
+          <button md-ripple md-raised-button color="primary"
+            (click)="insertCharacter(i)"
+          >NEW</button>
+        </md-card-actions>
+      </md-card>
+  </div>
+</md-sidenav-layout>
