--- a/src/app/demo/demo.component.css
+++ b/src/app/demo/demo.component.css
@@ -1,10 +1,22 @@
-md-sidenav-layout {
-  height: 100%;
+md-sidenav-layout.m2app-dark {
+  background: black;
+}
+
+.app-content {
+  padding: 20px;
+}
+
+.app-content md-card {
+  margin: 20px;
 }
 
 .app-sidenav {
   padding: 10px;
   min-width: 100px;
+}
+
+.app-content md-checkbox {
+  margin: 10px;
 }
 
 .app-toolbar-filler {
@@ -31,28 +43,6 @@ md-sidenav-layout {
   padding: 0;
   text-align: left;
   text-decoration: none;
-}
-
-.app-content {
-  /*padding: 20px;*/
-}
-
-.app-content form {
-  height: 100%;
-  display: unset;
-}
-
-.app-content md-card {
-  /*margin: 20px;*/
-  margin-bottom: 20px;
-}
-
-.app-content md-card + md-card {
-  margin-top: 20px;
-}
-
-.app-content md-checkbox {
-  margin: 10px;
 }
 
 .app-action {
