--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,17 @@
-md-sidenav-layout {
+md-sidenav-container {
   height: 100%;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 
 .app-sidenav {
   padding: 10px;
   min-width: 100px;
+  width: 80%;
 }
 
 .app-toolbar-filler {
